--- a/frontend/src/Components/Footer/footer.css
+++ b/frontend/src/Components/Footer/footer.css
@@ -13,6 +13,15 @@
   display: flex;
   gap: 10px;
 }
+.footer-infos li{
+  list-style: none;
+}
 .footer-infos a{
   text-decoration:none ;
+}
+.footer-infos a:hover{
+  color: #070707;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 8px;
 }
