--- a/frontend/src/Components/RegistrationForm/registrationForm.css
+++ b/frontend/src/Components/RegistrationForm/registrationForm.css
@@ -1,9 +1,9 @@
 :root {
-  --primary--color: #070707;
-  --secondary--color: #6F6F6F;
-  --light--color: #F5F5F5;
-  --bouton-hover--color: #F21000;
-  --bouton--color: #54646F;
+  --primary-color: #070707;
+  --secondary-color: #6F6F6F;
+  --light-color: #F5F5F5;
+  --button-hover-color: #F21000;
+  --button-color: #54646F;
 }
 
 h2 {
@@ -13,8 +13,8 @@ h2 {
 
 .form-container {
   display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr)); /* Deux colonnes avec largeur égale */
-  gap: 100px; /* Espacement entre les colonnes et les lignes */
+  grid-template-columns: repeat(2, 1fr); /* Deux colonnes avec largeur égale */
+  gap: 20px; /* Espacement entre les colonnes et les lignes */
   max-width: 700px; /* Limite de la largeur */
   margin: 0 auto; /* Centrer horizontalement */
   padding: 20px; /* Espacement entre le formulaire et les bordures */
@@ -27,36 +27,49 @@ input {
   padding: 8px; /* Réduire le padding */
   width: 100%; /* Pour occuper toute la largeur disponible */
   box-sizing: border-box; /* Inclure le padding dans la largeur totale */
-  font-size: 10px; /* Réduire la taille de la police */
+  font-size: 14px; /* Taille de la police ajustée */
   transition: all 0.3s ease; /* Transition sur toutes les propriétés */
 }
 
 input:hover {
-  transform: scale(1.1); 
+  transform: scale(1.05); /* Ajustement de l'échelle pour un effet de survol plus subtil */
 }
 
 label {
   display: block; /* Pour que les labels soient sur une ligne différente */
-  margin-bottom: 2px; /* Espacement entre les labels et les champs */
+  margin-bottom: 5px; /* Espacement entre les labels et les champs */
 }
 
-/* Appliquer la mise en page en colonne pour les champs Nom, Email et Mot de passe */
 .column1 {
   grid-column: 1; /* Première colonne */
 }
 
-/* Appliquer la mise en page en colonne pour les champs Adresse et Téléphone */
 .column2 {
   grid-column: 2; /* Deuxième colonne */
 }
 
 button {
-  background-color: var(--bouton--color); 
-  color: var(--light--color); 
+  background-color: var(--button-color); 
+  color: var(--light-color); 
   padding: 10px 20px; 
   cursor: pointer;  
+  border: none; /* Retirer la bordure par défaut */
+  transition: background-color 0.3s ease; /* Transition pour la couleur de fond */
 }
 
 button:hover {
-  background-color: var(--bouton-hover--color); 
+  background-color: var(--button-hover-color); 
+}
+
+.message {
+  text-align: center;
+  margin: 20px 0;
+}
+
+.success {
+ color: green;
+}
+
+.error {
+  color: red;
 }
