--- a/frontend/src/Pages/categories.css
+++ b/frontend/src/Pages/categories.css
@@ -5,19 +5,44 @@
   background-color: var(--light--color);
   padding:20px;
 }
-.sidebar {
-  width: 12%;
-  margin: 10px;
-  border-right: 1px solid var(--primary--color);
+.categorie_gallery {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  overflow-x: auto; /* Ajoute un défilement horizontal si nécessaire */
 }
 
-.sidebar_title {
-  font-size: 2rem;
-  font-weight: normal;
-  margin-bottom: 20px;
-  z-index: 1;
+.categorie_img {
+  position: relative;
+  width: 30%;
+  max-width: 300px; /* Limite la largeur des images */
+}
+
+.categorie_img img {
+  width: 100%; /* Utilise la largeur complète du conteneur */
+}
+
+.categorie_img_text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 10px 30px;
+  border-radius: 5px;
+  color: #000;
+  text-decoration: none;
+}
+
+.categorie_img_text:after {
+  content: '>';
+  margin-left: 10px; /* Ajuste la marge */
+}
+
+.categorie_infos {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  margin: 30px 0; /* Réduit la marge verticale */
 }
 
