--- a/frontend/src/Pages/video.css
+++ b/frontend/src/Pages/video.css
@@ -1,47 +1,55 @@
-.video{
-  width: 100%;
-  height: auto;
-  /* border: 2px solid red; */
-}
-.video h1{
-  font-size: 5rem;
-  text-align: center;
-  background-color: #F5F5F5;
+/* product.css */
+
+.product-container {
+  display: flex;
   padding: 20px;
-  margin-top: 20px;
-}
-.video-card {
-  width: 300px;
   border: 1px solid #ccc;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  margin: 16px auto;
-  padding: 16px;
-  background-color: #fff;
-  text-align: center;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  display: flex; 
+  flex-wrap: wrap; 
 }
 
-.video h2 {
-  font-size: 1.5em;
-  margin-bottom: 16px;
-}
-
-.video img {
-  width: 100%;
-  height: auto;
-  border-bottom: 1px solid #ccc;
-  margin-bottom: 16px;
-}
-
-.video p {
-  font-size: 1em;
-  margin: 8px 0;
-}
-
-.video p:last-of-type {
+.product-name {
+  font-size: 1.2em;
   font-weight: bold;
-  color: #333;
+  flex-basis: 100%; 
 }
 
+.product-details {
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap; 
+}
 
+.product-details p {
+  margin: 5px 10px; 
+}
+
+.product-description {
+  font-size: 1rem; 
+  max-width: 60%;
+  padding: 20px;
+  margin: 0 auto;
+  text-align: start;
+  
+}
+.product-description-end{
+  display: flex;
+}
+.product-image {
+  max-width: 200px; /* Largeur maximale pour l'image */
+  height: auto; /* Hauteur automatique pour maintenir le ratio */
+  transition: max-width 0.3s ease-in-out;
+}
+.product-image:hover{
+  max-width: 300px;
+  opacity: 0.7;
+  
+}
+
+.loading-message {
+  font-style: italic;
+}
