--- a/frontend/src/Components/Header/header.css
+++ b/frontend/src/Components/Header/header.css
@@ -100,6 +100,7 @@ header {
   padding: 2rem;
   visibility: hidden;
   background-color: var(--primary--color);
+  z-index: 1;
 }
 .show_nav .navbar_links{
 width: 100vw;
