--- a/frontend/src/Pages/categories.css
+++ b/frontend/src/Pages/categories.css
@@ -46,3 +46,11 @@
   margin: 30px 0; /* Réduit la marge verticale */
 }
 
+@media screen and (max-width:768px){
+  .categorie_gallery{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+}
