--- a/frontend/src/Pages/home.css
+++ b/frontend/src/Pages/home.css
@@ -1,9 +1,10 @@
 /* home css*/
 .hero {
   background-image: url("../Assets/svl.png");
+  width: 100%;
   height: 500px;
   position: relative;
-  background-size:fill;
+  background-size: fill ;
   background-repeat: no-repeat;
   /* border: 2px solid red; */
 }
