--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-  font-family: "Lato-Thin", "Open Sans", sans-serif;
+  font-family: "Arial", "Open Sans", sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
 }
